--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,20 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+p {
+  margin: 0px;
+  padding: 5px;
+}
+
+.task-box-div {
+  border: 1px solid white;
+  margin: 0px;
+  padding: 5px;
+}
+
+.task-box-div-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px 10px;
+}
