--- a/src/index.css
+++ b/src/index.css
@@ -1,71 +1,31 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color-scheme: dark;
   background-color: #242424;
 
-  font-synthesis: none;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+html {
+  height: 100%;
+  width: 100%;
+  padding: 0px;
+  margin: 0px;
 }
-a:hover {
-  color: #535bf2;
+
+div#root {
+  padding: 0px;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  padding: 0;
+  height: 100%;
+  width: 100%;
 }
 
 p {
@@ -73,14 +33,87 @@ p {
   padding: 5px;
 }
 
-.task-box-div {
-  border: 1px solid white;
-  margin: 0px;
-  padding: 5px;
+div {
+  width: 100%;
+  height: 100%;
 }
 
-.task-box-div-container {
+.markdown-chunk-outer-container {
+  height: 100%;
+  width: 100%;
+  /* position: relative; */
+  /* border: 3px solid green; */
   display: flex;
-  flex-direction: column;
-  gap: 10px 10px;
+}
+
+.markdown-chunk-container {
+  margin: auto;
+  /* margin: 0px; */
+  /* position: absolute; */
+  /* top: 50%; */
+  /* left: 25%; */
+  /* transform: translateY(-50%); */
+  /* -ms-transform: translateY(-50%); */
+  /* display: flex;
+  flex-direction: column; */
+  /* padding: 0px 10px; */
+}
+
+.markdown-chunk-container h1,
+.markdown-chunk-container h2,
+.markdown-chunk-container h3,
+.markdown-chunk-container p {
+  margin: 0px;
+  padding: 0px;
+}
+
+.markdown-chunk-container h1 {
+  font-size: 2em;
+  color: #64ffc9;
+}
+
+.markdown-chunk-container h2 {
+  font-size: 1.67em;
+  color: #64fff2;
+}
+
+.markdown-chunk-container h3 {
+  font-size: 1.33em;
+  color: #64c4ff;
+}
+
+.markdown-chunk-container p {
+  font-size: 1em;
+  /* color: #a6ffb5; */
+  padding: 2px;
+}
+
+.markdown-chunk-container li {
+  list-style-position: inside;
+}
+
+.markdown-chunk-container table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.markdown-chunk-container table th,
+.markdown-chunk-container table td {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.markdown-chunk-container table td {
+  /* border: 1px solid #64ff7e; */
+  padding: 4px;
+  /* color: #a6ffb5; */
+}
+
+.markdown-chunk-container table tr:nth-child(even) {
+  background-color: #333333;
+}
+
+.markdown-chunk-container table tr:nth-child(odd) {
+  background-color: #242424;
 }
